--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
-            <nav id="nav-menu" class="nav container">
+            <nav id="nav-menu_fuck" class="nav container">
                 <a href="#" class="nav_logo">chikkuuu</a>
                 <!-- nav bar -->
                 <div class="nav__menu" id="nav-menu">
