++ contact,scroll down and

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </li>
                         <li class="nav__item nav-link about">
                             <a class="nav__link" href="#about ">
-                                <i class="uil uil-user nav_ _icon"></i>About
+                                <i class="uil uil-user nav__icon"></i>About
                             </a>
                         </li>
                         <li class="nav__item nav-link skills">
@@ -72,7 +72,7 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <!-- socials -->
-                        <div class="home_social">
+                        <div class="home__social">
                             <a target="_blank" href="https://www.linkedin.com/in/mayank-raj-b55614181/" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
@@ -108,12 +108,22 @@
                         </div>
                         <!-- summary -->
                         <div class="home__data">
-                            <h1 id="user-detail-name" class="home__title">Hi,I'm chikkuuu</h1>
+                            <h1 id="user-detail-name" class="home__title">Hi, I'm chikkuuu</h1>
                             <h3 class="home__subtitle">Backend developer</h3>
-                            <p class="home__description" id="user-detail-intro">high level experences in web design and backend development knowledge, creating effiecient and scalable softwares</p>
-                            
+                            <p class="home__description" id="user-detail-intro">high level experences in web design and backend development knowledge, developing effiecient and scalable softwares</p>
+                            <a href="#contact" class="button button--flex">
+                               Contact Me <i class="uil uil-message button__icon"></i>
+                            </a>
                         </div>
 
+                    </div>
+                    <!-- div scrolll -->
+                    <div class="home__scroll">
+                        <a href="#about" class="home__scroll-button   button--flex">
+                            <!-- <i class="uil uil-direction home__scroll-arrow home__scroll-mouse"></i> -->
+                            <span class="home__scroll-name ">Scroll down</span>
+                            <i class="uil uil-angle-down home__scroll-arrow"></i>
+                        </a>
                     </div>
                 </div>
             </section>
