--- a/index.html
+++ b/index.html
@@ -19,3 +19,53 @@
 
     <title>Mayank Raj</title>
 </head>
+
+<body>
+    <!--==================== HEADER ====================-->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">Mayank Raj</a>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list grid">
+                    <li class="nav__item nav-link home">
+                        <a class="nav__link" href="#home">
+                            <i class="uil uil-estate nav__icon"></i>Home
+                        </a>
+                    </li>
+                    <li class="nav__item nav-link about">
+                        <a class="nav__link" href="#about ">
+                            <i class="uil uil-user nav__icon"></i>About
+                        </a>
+                    </li>
+                    <li class="nav__item nav-link skills">
+                        <a class="nav__link" href="#skills">
+                            <i class="uil uil-file-alt nav__icon"></i>Skills
+                        </a>
+                    </li>
+                    <li class="nav__item nav-link projects">
+                        <a class="nav__link" href="#projects">
+                            <i class="uil uil-briefcase-alt nav__icon"></i>Projects
+                        </a>
+                    </li>
+                    <li class="nav__item nav-link contact">
+                        <a class="nav__link" href="#contact">
+                            <i class="uil uil-link-alt nav__icon"></i>ContactMe
+                        </a>
+                    </li>
+                    <li class="nav__item nav-link resume">
+                        <a class="nav__link" target="_blank"
+                            href="https://drive.google.com/file/d/1OI8GWhlvyHDxnxdIaXEa2jF14FzoD3PT/view">
+                            <i class="uil uil-file-blank nav__icon"></i>Resume
+                        </a>
+                    </li>
+                </ul>
+                <i class="uil uil-times nav__close nav__icon" id="nav-close"></i>
+            </div>
+            <div class="nav__btns">
+                <i class="uil uil-moon change-theme" id="theme-button"></i>
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="uil uil-apps nav__icon"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
