--- a/index.html
+++ b/index.html
@@ -134,3 +134,51 @@
                 </div>
             </div>
         </section>
+        <!--==================== ABOUT ====================-->
+        <section class="about section" id="about">
+            <h2 class="section__title">About Me</h2>
+            <span class="section__subtitle"></span>
+
+            <div class="about__container container">
+                <img src="assets/img/about.png" alt="" class="about__img">
+
+                <div class="about__data">
+                    <p class="about__description">
+                        Hi! I'm Mayank, I have a degree in Computer Science from MLSU University,Udaipur.
+                        <br /><br />
+                        Currently I'm Learing Full Stack Web Development at Masai School.
+                        <br /><br />
+                        An Inquisitive solution-driven Full Stack Web Developer.
+                        Practised over 700 data structures and algorithms.
+                        Having 1200+ hours of hands-on experience in coding and developing real-world web applications.
+                        Passionate about learning new technologies and methodologies.
+                        <br /><br />
+                        If you want to know more about me, feel free to contact me.
+                    </p>
+
+                    <div class="about__info">
+                        <div>
+                            <span class="about__info-title">1200+</span>
+                            <span class="about__info-name">Hours of <br> Coding</span>
+                        </div>
+
+                        <div>
+                            <span class="about__info-title">700+</span>
+                            <span class="about__info-name">DSA <br> Problems </span>
+                        </div>
+                        <div>
+                            <span class="about__info-title">20+</span>
+                            <span class="about__info-name">Completed <br> Project</span>
+                        </div>
+
+                    </div>
+
+
+                    <div class="about__buttons">
+                        <a download="" href="assets/pdf/resume.pdf" target="_blank" class="button button--flex">
+                            Download CV<i class="uil uil-download-alt button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
