--- a/index.html
+++ b/index.html
@@ -182,3 +182,94 @@
                 </div>
             </div>
         </section>
+           <!--==================== PORTFOLIO ====================-->
+           <section class="portfolio section" id="portfolio">
+            <h2 class="section__title">Portfolio</h2>
+            <!-- <span class="section__subtitle"><a href="#">Click here</a> to see all.</span> -->
+
+            <div class="portfolio__container container swiper-container">
+                <div class="swiper-wrapper">
+
+                    <!--==================== PORTFOLIO 1 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <figure class="portfolio__figure">
+                            <img src="assets/img/mayank.gif" alt="" class="portfolio__img">
+                        </figure>
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">chikkuuu</h3>
+                            <p class="portfolio__description">
+                                i got, i got, i got power,posion and pain inside my DNA
+                            </p>
+                            <a href="https://github.com/07-Mayankraj" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                See More
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 2 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <figure class="portfolio__figure">
+                            <img src="assets/img/mayank.gif" alt="" class="portfolio__img">
+                        </figure>
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">chikkuuu</h3>
+                            <p class="portfolio__description">
+                                i got, i got, i got power,posion and pain inside my DNA
+                            </p>
+                            <a href="https://github.com/07-Mayankraj" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                See More
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 3 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <figure class="portfolio__figure">
+                            <img src="assets/img/mayank.gif" alt="" class="portfolio__img">
+                        </figure>
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">chikkuuu</h3>
+                            <p class="portfolio__description">
+                                i got, i got, i got power,posion and pain inside my DNA
+                            </p>
+                            <a href="https://github.com/07-Mayankraj" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                See More
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 4 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <figure class="portfolio__figure">
+                            <img src="assets/img/mayank.gif" alt="" class="portfolio__img">
+                        </figure>
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">chikkuuu</h3>
+                            <p class="portfolio__description">
+                                i got, i got, i got power,posion and pain inside my DNA
+                            </p>
+                            <a href="https://github.com/07-Mayankraj" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                See More
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Add Arrows -->
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+        <br /><br />
