--- a/index.html
+++ b/index.html
@@ -708,4 +708,90 @@
                 </div>
             </div>
         </section>
-        
+          <!--==================== CONTACT ME ====================-->
+          <section class="contact section" id="contact">
+            <h2 class="section__title">Contact</h2>
+            <span class="section__subtitle">Get in touch</span>
+
+            <div class="contact__container container grid">
+                <div>
+                    <div class="contact__information">
+                        <a href="https://www.instagram.com/mayank_raj____/" target="_blank">
+                                <i class="uil uil-instagram contact__icon"></i></a>
+                                
+                        <div>
+                            <h3 class="contact__title">Instagram</h3>
+                            <a href="https://www.instagram.com/mayank_raj____/" target="_blank"><span
+                                    class="contact__subtitle">@mayank_raj____</span></a>
+                        </div>
+                    </div>
+
+                    <div class="contact__information">
+                        <a href="https://www.linkedin.com/in/mayank-raj-b55614181/" target="_blank"><i
+                                class="uil uil-linkedin contact__icon"></i></a>
+                        <div>
+                            <h3 class="contact__title">LinkedIn</h3>
+                            <a href="https://www.linkedin.com/in/mayank-raj-b55614181/" target="_blank"><span
+                                    class="contact__subtitle">www.linkedin.com/in/mayank-raj</span></a>
+                        </div>
+                    </div>
+
+                    <div class="contact__information">
+                        <a href="https://github.com/07-Mayankraj" target="_blank"><i
+                                class="uil uil-github contact__icon"></i></a>
+                        <div>
+                            <h3 class="contact__title">GitHub</h3>
+                            <a href="https://github.com/07-Mayankraj" target="_blank"><span
+                                    class="contact__subtitle">@07-Mayankraj</span></a>
+                        </div>
+                    </div>
+
+                    <div class="contact__information">
+                        <a href="mailto:fscoiety430@gmail.com"><i class="uil uil-envelope-alt contact__icon"></i></a>
+                        <div>
+                            <h3 class="contact__title">Email</h3>
+                            <a href="mailto:fscoiety430@gmail.com"><span
+                                    class="contact__subtitle">fscoiety430@gmail.com</span></a>
+
+                        </div>
+                    </div>
+
+                    <div class="contact__information">
+                        <i class="uil uil-map-marker contact__icon"></i>
+                        <div>
+                            <h3 class="contact__title">Location</h3>
+                            <span class="contact__subtitle">Udaipur, Rajasthan</span>
+                        </div>
+                    </div>
+                </div>
+
+                <form action="" class="contact__form grid">
+                    <div class="contact__inputs grid">
+                        <div class="contact__content">
+                            <label for="" class="contact__label">Name</label>
+                            <input type="text" class="contact__input">
+                        </div>
+
+                        <div class="contact__content">
+                            <label for="" class="contact__label">Email</label>
+                            <input type="email" class="contact__input">
+                        </div>
+                    </div>
+                    <div class="contact__content">
+                        <label for="" class="contact__label">Project</label>
+                        <input type="text" class="contact__input">
+                    </div>
+                    <div class="contact__content">
+                        <label for="" class="contact__label">Message</label>
+                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                    </div>
+
+                    <div>
+                        <a href="mailto:fscoiety430@gmail.com" class="button button--flex">
+                            Send Message
+                            <i class="uil uil-message button__icon"></i>
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </section>
