--- a/index.html
+++ b/index.html
@@ -795,3 +795,48 @@
                 </form>
             </div>
         </section>
+
+    </main>
+
+    <!--==================== FOOTER ====================-->
+    <footer class="footer">
+        <div class="footer__bg">
+            <div class="footer__container container grid">
+                <div>
+                    <span class="footer__title">Mayank Raj</span>
+                    <span class="footer__subtitle">Backend Developer</span>
+                </div>
+
+                <ul class="footer__links">
+                    <li>
+                        <a href="#home" class="footer__link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#about" class="footer__link">About</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio" class="footer__link">Portfolio</a>
+                    </li>
+                </ul>
+
+                <div class="footer__socials">
+                    <a href="https://www.linkedin.com/in/mayank-raj-b55614181/" target="_blank" class="footer__social">
+                        <i class="uil uil-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/07-MayankrajThanks to " target="_blank" class="footer__social">
+                        <i class="uil uil-github"></i>
+                    </a>
+                </div>
+
+            </div>
+            <p class="footer__copy">
+                Made with <span style="color: #e25555;">&hearts;</span> by
+                Mayank Raj
+                <br>
+                <a href=" https://github.com/bedimcode"class="contact__subtitle"
+                    target="_blank">Thanks to Bedimcode</a>
+                <br>
+                Copyright &#169; Mayank Raj. All rights reserved.
+            </p>
+        </div>
+    </footer>
