--- a/index.html
+++ b/index.html
@@ -840,3 +840,7 @@
             </p>
         </div>
     </footer>
+     <!--==================== SCROLL TOP ====================-->
+     <a href="#" class="scrollup" id="scroll-up">
+        <i class="uil uil-arrow-up scrollup__icon"></i>
+    </a>
