--- a/index.html
+++ b/index.html
@@ -844,3 +844,11 @@
      <a href="#" class="scrollup" id="scroll-up">
         <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
+      <!--==================== SWIPER JS ====================-->
+      <script src="assets/js/swiper-bundle.min.js"></script>
+
+      <!--==================== MAIN JS ====================-->
+      <script src="assets/js/main.js"></script>
+  </body>
+  
+  </html>
