all skillls are open by default

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     </div>
                 </div>
                 <!-- Tools -->
-                <div class="skills__content skills__close">
+                <div class="skills__content skills__open">
                     <div class="skills__header">
                         <i class="uil uil-arrow skills__icon"></i>
                         <div>
