--- a/index.html
+++ b/index.html
@@ -838,12 +838,11 @@
             </div>
             <p class="footer__copy">
                 Made with <span style="color: #e25555;">&hearts;</span> by
-                Mayank Raj
-                <br>
-                <a href=" https://github.com/bedimcode"class="contact__subtitle"
-                    target="_blank">Thanks to Bedimcode</a>
-                <br>
+                Mayank Raj <br>
                 Copyright &#169; Mayank Raj. All rights reserved.
+                <br>
+                <a href="https://www.youtube.com/watch?v=27JtRAI3QO8" style="text-decoration: none; color: rgb(176, 176, 176);" target="_blank">Thanks to Bedimcode</a>
+                <br>
             </p>
         </div>
     </footer>
