--- a/index.html
+++ b/index.html
@@ -804,7 +804,8 @@
         </section>
         
     </main>
-
+    <h1>add project</h1>
+    <h1>add education</h1>
     <!--==================== FOOTER ====================-->
     <footer class="footer">
         <div class="footer__bg">
