--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                         <p class="home__description" id="user-detail-intro">high level experences in web design and
                             backend development knowledge, developing effiecient and scalable softwares</p>
                         <a href="#contact" class="button button--flex">
-                            Contact Me <i class="uil uil-message button__icon"></i>
+                            Contact Me <i class="uil uil-comment-alt button__icon"></i>&nbsp&nbsp
+                             
                         </a>
                     </div>
 
@@ -179,7 +180,7 @@
 
                     <div class="about__buttons">
                         <a download="" href="assets/pdf/resume.pdf" target="_blank" class="button button--flex">
-                            Download CV<i class="uil uil-download-alt button__icon"></i>
+                            Download CV<i class="uil uil-cloud-download button__icon"></i>&nbsp&nbsp
                         </a>
                     </div>
                 </div>
@@ -796,7 +797,7 @@
                     <div>
                         <a href="mailto:fscoiety430@gmail.com" class="button button--flex">
                             Send Message
-                            <i class="uil uil-message button__icon"></i>
+                            <i class="uil uil-comment-alt button__icon"></i>&nbsp&nbsp
                         </a>
                     </div>
                 </form>
