--- a/index.html
+++ b/index.html
@@ -842,9 +842,9 @@
                 Made with <span style="color: #e25555;">&hearts;</span> by
                 Mayank Raj <br>
                 Copyright &#169; Mayank Raj. All rights reserved.
-                <br>
-                <a href="https://www.youtube.com/watch?v=27JtRAI3QO8" style="text-decoration: none; color: rgb(176, 176, 176);" target="_blank">Thanks to Bedimcode</a>
-                <br>
+                <!-- <br> -->
+                <!-- <a href="https://www.youtube.com/watch?v=27JtRAI3QO8" style="text-decoration: none; color: rgb(176, 176, 176);" target="_blank">Thanks to Bedimcode</a> -->
+                <!-- <br> -->
             </p>
         </div>
     </footer>
