--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                                <image class="home__blob-img" href="./assets/img/3.png" />
+                                <image class="home__blob-img" href="./assets/img/64313141416ee177e7652a14b9c56406a1618c87a0efde711db44a3178ecae1c.0.png" />
                             </g>
                         </svg>
                     </div>
