--- a/experiments.html
+++ b/experiments.html
@@ -556,10 +556,11 @@
             </section>-->
 
         <!--  -->
-        -------------------------------- skills section with percentage---------------------------------------------->
+        <!-- -------------------------------- skills section with percentage----------------------------------------------> -->
+        
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <span class="section__subtitle">A little bit on my technical level</span>
+            <!-- <span class="section__subtitle">A little bit on my technical level</span> -->
 
             <div class="skills__container container grid">
                 <div>
@@ -843,7 +844,7 @@
         <!-- ==================== SKILLS ====================== -->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <span class="section__subtitle">A little bit on my technical level</span>
+            <!-- <span class="section__subtitle">A little bit on my technical level</span> -->
 
             <div class="skills__container container grid">
                 <div>
