--- a/experiments.html
+++ b/experiments.html
@@ -20,7 +20,9 @@
     <title>Mayank Raj</title>
 </head>
 
-<body>
+
+
+<body> 
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
@@ -109,7 +111,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                                <image class="home__blob-img" href="./assets/img/tp.jpg" />
+                                <image class="home__blob-img" href="./assets/img/" />
                             </g>
                         </svg>
                     </div>
@@ -413,8 +415,8 @@
 
 
 
-        <!--==================== SERVICES ==================== 
-            <br /><br />
+        <!-- <!--==================== SERVICES ====================  -->
+            <!-- <br /><br />
             <section class="services section" id="services">
                 <h2 class="section__title">What I Like To Do and Learn</h2>
                 <span class="section__subtitle">Work & Hobbies</span>
@@ -553,10 +555,9 @@
                     </div>
                 </div>
 
-            </section>-->
+            </section> -->
 
-        <!--  -->
-        <!-- -------------------------------- skills section with percentage----------------------------------------------> -->
+        <!-- -------------------------------- skills section without percentage----------------------------------------------> -->
         
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
