--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
 
         <!--==================== Github actitvities ====================-->
 
-        <section class="portfolio section" id="githubstates">
+        <section class="portfolio section githubstates" id="githubstates">
             <h2 class="section__title">GitHub Activities</h2>
 
             <div class="portfolio__container container swiper-container">
