--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@
         <!-- ==================== SKILLS ====================== -->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <span class="section__subtitle">My intrests</span>
+            <!-- <span class="section__subtitle">My intrests</span> -->
 
             <div class="skills__container container grid">
                 <div>
                     <!-- frontend  development -->
 
-                    <div class="skills__content skills__open">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
 
@@ -536,7 +536,7 @@
                     </div>
                 </div>
                 <!-- Backend -->
-                <div class="skills__content skills__open">
+                <div class="skills__content skills__close">
                     <div class="skills__header">
                         <!-- <i class="uil uil-brackets-curly skills__icon"></i> -->
                         <i class="uil uil-cloud-database-tree skills__icon"></i>
@@ -602,7 +602,7 @@
                     </div>
                 </div>
                 <!-- Tools -->
-                <div class="skills__content skills__open">
+                <div class="skills__content skills__close">
                     <div class="skills__header">
                         <i class="uil uil-arrow skills__icon"></i>
                         <div>
@@ -680,7 +680,7 @@
                     </div>
                 </div>
                 <!-- softskills -->
-                <div class="skills__content skills__open">
+                <div class="skills__content skills__close">
                     <div class="skills__header">
                         <i class="uil uil-analysis skills__icon"></i>
 
