id change again

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li class="nav__item nav-link projects">
-                        <a class="nav__link" href="#portfolio">
+                        <a class="nav__link" href="#projects">
                             <i class="uil uil-briefcase-alt nav__icon"></i>Projects
                         </a>
                     </li>
@@ -98,7 +98,7 @@
                     </div>
                     <!-- profile image -->
 
-                    <div class="home__img home-img">
+                    <div class="home__img ">
 
 
                         <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
@@ -115,7 +115,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                                <image class="home__blob-img" href="./assets/img/tp.png" />
+                                <image  class="home__blob-img home-img" scr="" href="./assets/img/tp.png" />
                             </g>
                         </svg>
                     </div>
@@ -329,7 +329,8 @@
 
 
         <!--==================== PORTFOLIO ====================-->
-        <section class="portfolio section" id="portfolio">
+        <!-- id="portfolio" -->
+        <section class="portfolio section" id="projects" >
             <h2 class="section__title">Projects</h2>
             <!-- <span class="section__subtitle"><a href="#">Click here</a> to see all.</span> -->
 
@@ -340,10 +341,10 @@
                     <div class="portfolio__content grid swiper-slide">
                         <figure class="portfolio__figure project-card">
                             <img src="https://user-images.githubusercontent.com/87657007/214338799-dd8045ec-3cd5-4aec-82f7-f362396d0440.png"
-                                alt="" class="portfolio__img">
+                                alt="" class="portfolio__img project-title">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title project-title">Firestone (clone)</h3>
+                            <h3 class="portfolio__title ">Firestone (clone)</h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 Clone of Firestone which sells Tires, and automobile parts. <br>
                                 Developed fronted using Html5 | CSS3 | JavaScript and Back-End using Node | Express |
@@ -368,10 +369,10 @@
                     <div class="portfolio__content grid swiper-slide">
                         <figure class="portfolio__figure project-card">
                             <img src="https://user-images.githubusercontent.com/87657007/208608709-2b7d7b95-3336-4638-9ab4-0d2505d10a63.png"
-                                alt="" class="portfolio__img">
+                                alt="" class="portfolio__img project-title">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title project-title">SkinCure (clone) </h3>
+                            <h3 class="portfolio__title ">SkinCure (clone) </h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 Skincure is a clone of SkinStore,an online sales site for beauty products. <br>
                                 Tech stack : Html5 | CSS3 | JavaScript <br>
@@ -395,10 +396,10 @@
                     <div class="portfolio__content grid swiper-slide">
                         <figure class="portfolio__figure project-card">
                             <img src="https://user-images.githubusercontent.com/87657007/203859011-d9011312-61b1-4925-8ffb-c1a185b626d9.png"
-                                alt="" class="portfolio__img">
+                                alt="" class="portfolio__img project-title">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title project-title">ChargeBee (clone) </h3>
+                            <h3 class="portfolio__title ">ChargeBee (clone) </h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 Billbee is a clone of chargeBee and it’s an online billing software
                                 service. <br>
@@ -422,10 +423,10 @@
                     <div class="portfolio__content grid swiper-slide">
                         <figure class="portfolio__figure project-card">
                             <img src="https://user-images.githubusercontent.com/87657007/218889120-c4cd6d3f-5335-4d51-afa5-93c607a3adb0.png"
-                                alt="" class="portfolio__img">
+                                alt="" class="portfolio__img project-title">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title project-title">07-Mayankraj.io </h3>
+                            <h3 class="portfolio__title ">07-Mayankraj.io </h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 This is my personal portfolio. <br>
                                 I've used html css JavaScript to build it <br>
